--- a/card.html
+++ b/card.html
@@ -6,10 +6,10 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<div>
+		<div class="animal-card">
 			<h3>Wolf</h3>
 			<img src="wolf-142173_1280.jpg" alt="Wolf">
-			<div>
+			<div id="information">
 				<!-- your favorite animal's interesting fact goes here -->
 				<p id="interesting-fact">
 					Unlike other animals, wolves have a variety
@@ -22,7 +22,7 @@
 					<li><span>Activities</span>: play</li>
 				</ul>
 				<!-- your favorite animal's description goes here -->
-				<p id="description">
+				<p>
 					Wolves are a class of the canine family, and they seem
 					to do very well in the right environment. In fact, they are the
 					largest of all canines with exception of some dog species. They
