--- a/card.html
+++ b/card.html
@@ -9,17 +9,17 @@
 		<div class="animal-card">
 			<h3>Wolf</h3>
 			<img src="wolf-142173_1280.jpg" alt="Wolf">
-			<div id="information">
+			<div class="information">
 				<!-- your favorite animal's interesting fact goes here -->
-				<p id="interesting-fact">
+				<p class="interesting-fact">
 					Unlike other animals, wolves have a variety
 					of distinctive facial expressions they use to communicate and
 					maintain pack unity.
 				</p>
-				<ul id="animal-list-items">
+				<ul class="animal-list-items">
 					<!-- your favorite animal's list items go here -->
-					<li><span>Food</span>: meat</li>
-					<li><span>Activities</span>: play</li>
+					<li><span class="list-items-bold">Food</span>: meat</li>
+					<li><span class="list-items-bold">Activities</span>: play</li>
 				</ul>
 				<!-- your favorite animal's description goes here -->
 				<p>
